--- a/code/pom.xml
+++ b/code/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.google.sps</groupId>
+  <groupId>com.onlinecontacttracing</groupId>
   <artifactId>code</artifactId>
   <version>1</version>
   <packaging>war</packaging>
@@ -33,6 +33,27 @@
         <artifactId>appengine-api-1.0-sdk</artifactId>
         <version>1.9.59</version>
     </dependency>
+    <dependency>
+      <groupId>com.googlecode.objectify</groupId>
+      <artifactId>objectify</artifactId>
+      <version>6.0.6</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
+   
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-gmail</artifactId>
+      <version>v1-rev20200601-1.30.10</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.apis</groupId>
+        <artifactId>google-api-services-calendar</artifactId>
+        <version>v3-rev411-1.25.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -45,22 +66,9 @@
         <artifactId>appengine-maven-plugin</artifactId>
         <version>2.2.0</version>
         <configuration>
-          <deploy.projectId>covid-catchin-code</deploy.projectId>
+          <deploy.projectId>covid-catchers-fixed-gcp</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
-      </plugin>
-      <!-- New plugin necessary to deploy because old plugin is deprecated. 
-      Can use `mvn appengine:run` for local testing. 
-      Can use `mvn appengine:deploy` for deploying. -->
-      <plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>2.2.0</version>
-        <!-- TODO: uncomment configuration block and provide project ID. -->
-        <!-- <configuration>
-            <deploy.projectId>YOUR_PROJECT_ID_HERE</deploy.projectId>
-            <deploy.version>1</deploy.version>
-        </configuration> -->
       </plugin>
     </plugins>
   </build>
